tests/negative/regression/r29.orng
// r29.orng:9:14: error: error: expected a compile-time constant type, got block
//     fn x(y: {Int}) -> ()
//             ^
// r29.orng:9:24: error: error: expected a compile-time constant type, got function
//     fn x(y: {Int}) -> ()
//                       ^
// 
trait A {
    fn x(y: {Int}) -> ()
}

impl A for Int {
    fn x(y: {Int}) -> () {
        _ = y
    }
}

fn main() -> Int {
    4
}